--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,12 @@
 	    <version>4.11.0</version>
 	</dependency>
 	
+	<dependency>
+      <groupId>org.seleniumhq.selenium</groupId>
+      <artifactId>selenium-chromium-driver</artifactId>
+      <version>4.11.0</version>
+</dependency>
+
 <!--	<dependency>
     <groupId>io.github.bonigarcia</groupId>
     <artifactId>webdrivermanager</artifactId>
