test case for findin flights

--- a/pom.xml
+++ b/pom.xml
@@ -96,5 +96,10 @@
 		<version>3.1.2</version>
 	</dependency>
 
+	<dependency>
+		<groupId>Gantry</groupId>
+		<artifactId>Gantry</artifactId>
+		<version>0.0.1-SNAPSHOT</version>
+	</dependency>
   </dependencies>
 </project>
